New test version 3.1.0
1) Fixed bugs in web interface. Now it correctly works in firefox and
opera.
2) Added L7-filter in test mode.
3) Some changes in flow2sql.py and traflib3.py.
4) Updated instructions.

--- a/webroute3/html/web_route/index.html
+++ b/webroute3/html/web_route/index.html
@@ -70,8 +70,10 @@
 				<td height="100%"><br/><br/><br/>
 				Для входа в систему необходимо ввести логин и пароль.</br></br>
 				<form action="./lib/login.php" method="POST">
-				логин &nbsp;&nbsp;&nbsp;<input type="text" name="login"><br/>
-				пароль <input type="password" name="pass"><br/></br>
+                    <table border="0">
+                        <tr><td>логин</td><td><input type="text" name="login"></td></tr>
+                        <tr><td>пароль</td><td><input type="password" name="pass"></td></tr>
+                    </table>
 				<input type="submit" name="submit" value="войти">
 				</form>
                 <br/><br/><br/>
