--- a/webroute3/html/web_route/instructions/admin.html
+++ b/webroute3/html/web_route/instructions/admin.html
@@ -114,6 +114,10 @@
         (удобно использовать для временного увеличения квоты). Если квота была превышена и пользователь был заблокирован то в графе причина
         будет указано что именно он превысил. Так month_in - месячная квота входящего трафика, month_out - месячная квота исходящего трафика,
         day_in - дневная квота входящего трафика, day_out - дневная квота исходящего трафика.<br>
+        c) Протоколы L7. Служит для включения/выключения анализа трафика по различным протоколам. Внимание, чем больше включено протоколов, тем
+        больше нагрузка на сервер(на процеесор сервера). Также обратите внимание на параметр скорость (от 1 до 4) чем он меньше, тем сильнее нагрузка.<br>
+        d) Фильтрация L7. Содержит форму для добавления фильтров, а также таблицу уже созданных правил(с помощью таблицы можно и удалять правила).<br>
+
 
         <h3><a name="6">6) Отчеты.</a></h3>
         Служит для просмотра сформированных отчетов по трафику и посещению web страниц.<br>
