--- a/webroute3/html/web_route/instructions/admin.html
+++ b/webroute3/html/web_route/instructions/admin.html
@@ -117,7 +117,8 @@
         c) Протоколы L7. Служит для включения/выключения анализа трафика по различным протоколам. Внимание, чем больше включено протоколов, тем
         больше нагрузка на сервер(на процеесор сервера). Также обратите внимание на параметр скорость (от 1 до 4) чем он меньше, тем сильнее нагрузка.<br>
         d) Фильтрация L7. Содержит форму для добавления фильтров, а также таблицу уже созданных правил(с помощью таблицы можно и удалять правила).<br>
-
+        Примечание: L7-фильтр — программный пакет, представляющий собой классификатор для подсистемы Netfilter в ОС Linux, который может распределять
+        по категориям IP-пакеты, базируясь на данных прикладного уровня.<br>
 
         <h3><a name="6">6) Отчеты.</a></h3>
         Служит для просмотра сформированных отчетов по трафику и посещению web страниц.<br>
